fix: the secret name in deployment

--- a/lookerbot/templates/deployment.yaml
+++ b/lookerbot/templates/deployment.yaml
@@ -1,4 +1,4 @@
-{{- $secretname := include "hyperopt.fullname" . -}}
+{{- $secretname := include "lookerbot.fullname" . -}}
 apiVersion: apps/v1beta2
 kind: Deployment
 metadata:
