--- a/lookerbot/templates/deployment.yaml
+++ b/lookerbot/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
             {{- end}}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .Values.env.PORT }}
               protocol: TCP
           livenessProbe:
             httpGet:
